fix horizontal scroll caused by the zoom functionality inside the product gallery

--- a/src/_styles/modules/product-detail.scss
+++ b/src/_styles/modules/product-detail.scss
@@ -148,6 +148,7 @@
 
 .product-galleries {
   position: relative;
+  overflow: hidden;
 }
 
 // Make these go flush on mobile
